[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/menu/levels_screen/levels_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/127Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/styles/RedButtonStyleHover.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/styles/RedButtonStyleNormal.tres" type="StyleBox" id=5]
[ext_resource path="res://scenes/shared/background/backgrounds/day/day.png" type="Texture" id=6]
[ext_resource path="res://scenes/actors/objects/shine/icon.png" type="Texture" id=7]
[ext_resource path="res://scenes/actors/objects/yellow_coin/preview.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/DelfinoFont24.tres" type="DynamicFont" id=9]
[ext_resource path="res://scenes/actors/objects/sign/sign.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.75, 0.75, 0.75, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.61, 0.61, 0.61, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=14]
content_margin_right = 8.0
bg_color = Color( 0.121569, 0.180392, 0.517647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id=18]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 15 )
VScrollBar/styles/grabber_highlight = SubResource( 16 )
VScrollBar/styles/grabber_pressed = SubResource( 17 )
VScrollBar/styles/scroll = SubResource( 14 )
VScrollBar/styles/scroll_focus = SubResource( 14 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0805, 0.120925, 0.35, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.121569, 0.180392, 0.517647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 3 )

[node name="LevelsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 736.0
margin_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 286.0
margin_bottom = 368.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 320.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="LevelList" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 278.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 18 )
custom_styles/selected_focus = SubResource( 10 )
custom_styles/bg_focus = SubResource( 2 )
custom_styles/selected = SubResource( 10 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 286.0
margin_bottom = 368.0

[node name="ButtonBack" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 87.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="ButtonAdd" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 91.0
margin_right = 168.0
margin_bottom = 44.0
size_flags_horizontal = 8
custom_fonts/font = ExtResource( 9 )
text = "Add"

[node name="LevelInfo" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 704.0
margin_bottom = 368.0
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo"]
margin_left = 16.0
margin_right = 398.0
margin_bottom = 368.0
custom_constants/separation = 11

[node name="LevelThumbnail" type="MarginContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer"]
margin_right = 382.0
margin_bottom = 122.0
size_flags_vertical = 3
custom_constants/margin_right = 60
custom_constants/margin_top = 0
custom_constants/margin_left = 60
custom_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelThumbnail"]
margin_left = 60.0
margin_right = 322.0
margin_bottom = 122.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ThumbnailImage" type="TextureRect" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelThumbnail/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 254.0
margin_bottom = 114.0
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="LevelName" type="Label" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer"]
margin_top = 133.0
margin_right = 382.0
margin_bottom = 194.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 5 )
text = "Level Name Really Really Long Long"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 2

[node name="LevelScore" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer"]
margin_top = 205.0
margin_right = 382.0
margin_bottom = 313.0
size_flags_vertical = 4

[node name="ShinesAndStarCoins" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore"]
margin_right = 382.0
margin_bottom = 52.0
size_flags_vertical = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins"]
margin_right = 189.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins/PanelContainer"]
margin_left = 16.0
margin_top = 2.0
margin_right = 173.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins/PanelContainer/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins/PanelContainer/HBoxContainer2"]
margin_left = 118.0
margin_top = 10.0
margin_right = 157.0
margin_bottom = 38.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 7 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins"]
margin_left = 193.0
margin_right = 382.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins/PanelContainer2"]
margin_left = 16.0
margin_top = 2.0
margin_right = 173.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins/PanelContainer2/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/ShinesAndStarCoins/PanelContainer2/HBoxContainer3"]
margin_left = 118.0
margin_top = 10.0
margin_right = 157.0
margin_bottom = 38.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 7 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsAndTime" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore"]
margin_top = 56.0
margin_right = 382.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime"]
margin_right = 189.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime/PanelContainer"]
margin_left = 16.0
margin_top = 2.0
margin_right = 173.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime/PanelContainer/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime/PanelContainer/HBoxContainer2"]
margin_left = 142.0
margin_top = 10.0
margin_right = 157.0
margin_bottom = 38.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime"]
margin_left = 193.0
margin_right = 382.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime/PanelContainer2"]
margin_left = 16.0
margin_top = 2.0
margin_right = 173.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime/PanelContainer2/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime/PanelContainer2/HBoxContainer3"]
margin_left = 55.0
margin_top = 10.0
margin_right = 157.0
margin_bottom = 38.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 7 )
text = "99:99.99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTimeScores" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/LevelScore/CoinsAndTime" instance=ExtResource( 2 )]
visible = false
margin_left = 293.0
margin_right = 460.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "Time Scores"

[node name="ControlButtons" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer"]
margin_top = 324.0
margin_right = 382.0
margin_bottom = 368.0
size_flags_horizontal = 6
size_flags_vertical = 8

[node name="ButtonPlay" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/ControlButtons" instance=ExtResource( 2 )]
margin_right = 84.0
margin_bottom = 44.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 8 )
text = "Play"

[node name="ButtonEdit" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/ControlButtons" instance=ExtResource( 2 )]
margin_left = 88.0
margin_right = 167.0
margin_bottom = 44.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 9 )
text = "Edit"

[node name="ButtonDelete" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/ControlButtons" instance=ExtResource( 2 )]
margin_left = 171.0
margin_right = 280.0
margin_bottom = 44.0
size_flags_horizontal = 2
size_flags_vertical = 8
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Delete"

[node name="ButtonReset" parent="MarginContainer/HBoxContainer/LevelInfo/VBoxContainer/ControlButtons" instance=ExtResource( 2 )]
margin_left = 284.0
margin_right = 382.0
margin_bottom = 44.0
size_flags_horizontal = 2
size_flags_vertical = 8
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Reset"
